--- a/css/main.css
+++ b/css/main.css
@@ -4,5 +4,5 @@ body{
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center center ;
-    height: 100vh;
+    min-height: 100vh;
 }
